[package]
name = "neolite"
version = "0.1.0"
authors = ["azzamsa <azzam@biznetgio.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BiznetGIO/neolite"
rust-version = "1.77.1"
description = "NEO Lite SDK"

[dependencies]
http = "1.1.0"
log = "0.4.21"
reqwest = { version = "0.12.2", default-features = false, features = ["rustls-tls", "json", "multipart"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.115"
thiserror = "1.0.58"

[dev-dependencies]
anyhow = "1.0.81"
dotenvy = "0.15.7"
env_logger = "0.11.3"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
